add domain field

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   </head>
   <body>
     <div class="container">
+      <div class="domain mb24">
+        <label class="bg-blue" for="domain-input">Domain Name</label>
+        <input type="text" id="domain-input" />
+      </div>
       <div class="title mb80">
         <label class="bg-blue" for="title-input">Article Title</label>
         <input type="text" id="title-input" />
